# twitter_clone

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
.github/workflows/: deploy.yml
cloneTwitter/: asgi.py  settings.py  urls.py  wsgi.py
social/: settings.py
staticfiles/: staticfiles.json
templates/: base.html  index.html  sidebar.html  tweet.html
tests/models/: __init__.py  test_profile.py  test_tweet.py
tests/views/: test_tweet.py
twitter_app/: admin.py  factories.py  urls.py
twitter_app/migrations/: 0001_initial.py  0002_remove_tweet_slug_delete_comments.py  0002_tweet_comments.py
twitter_app/models/: __init__.py  profile.py  tweet.py
twitter_app/views/: __init__.py  profile_views.py  tweet_views.py
